force-app/main/default/objects/AF_InvoiceSummary__c/AF_InvoiceSummary__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INVM-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>