force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_Account__c.field-meta.xml
<CustomField>
    <fullName>AF_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>AF_InvoiceSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>