force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_Balance__c.field-meta.xml
<CustomField>
    <fullName>AF_Balance__c</fullName>
    <description>Rollup from linked Payments — lookup-based, maintained by automation.</description>
    <label>Balance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>