force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_Contact__c.field-meta.xml
<CustomField>
    <fullName>AF_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>AF_InvoiceSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>