force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_ExpectedTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>AF_ExpectedTotalAmount__c</fullName>
    <description>From Opportunity/Quote. Labelled expected/provisional.</description>
    <label>Expected Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>