force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_KeyloopDocumentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopDocumentReference__c</fullName>
    <label>Keyloop Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>