force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_KeyloopInvoiceReference__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopInvoiceReference__c</fullName>
    <externalId>true</externalId>
    <label>Keyloop Invoice Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>