force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_KeyloopTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopTotalAmount__c</fullName>
    <description>Set by integration once received.</description>
    <label>Keyloop Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>