force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_LegalInvoice__c.field-meta.xml
<CustomField>
    <fullName>AF_LegalInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Must remain No — Salesforce is not the financial system of record. Guardrail field (C-7).</description>
    <label>Legal Invoice?</label>
    <type>Checkbox</type>
</CustomField>