force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AF_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>AF_InvoiceSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>