force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>AF_PaidAmount__c</fullName>
    <description>Rollup from linked Payments — lookup-based (not Master-Detail), maintained by automation.</description>
    <label>Paid Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>