force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_Quote__c.field-meta.xml
<CustomField>
    <fullName>AF_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>AF_InvoiceSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>