force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_Status__c.field-meta.xml
<CustomField>
    <fullName>AF_Status__c</fullName>
    <label>Invoice Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Draft Mirror</fullName>
                <isActive>false</isActive>
                <label>Draft Mirror</label>
            </value>
            <value>
                <fullName>Expected</fullName>
                <isActive>false</isActive>
                <label>Expected</label>
            </value>
            <value>
                <fullName>Issued</fullName>
                <isActive>false</isActive>
                <label>Issued</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>