force-app/main/default/objects/AF_InvoiceSummary__c/fields/AF_TotalMismatch__c.field-meta.xml
<CustomField>
    <fullName>AF_TotalMismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when Expected Total Amount differs from Keyloop Total Amount. Blocks the Closed Won gate until resolved (rule to be built).</description>
    <label>Expected vs Keyloop Mismatch?</label>
    <type>Checkbox</type>
</CustomField>