force-app/main/default/objects/AF_InvoiceSummary__c/validationRules/AF_VR_InvoiceSummary_AmountsNotNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_InvoiceSummary_AmountsNotNegative</fullName>
    <active>true</active>
    <description>ALF-RS-09 (LFRDN-339): guards the amounts AF_InvoiceSummaryService writes on every Payment recalculation - expected total and paid amount can never be negative.</description>
    <errorConditionFormula>OR(
    AF_ExpectedTotalAmount__c &lt; 0,
    AF_PaidAmount__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Expected Total Amount and Paid Amount cannot be negative.</errorMessage>
</ValidationRule>